Improve colors and loading of data silo

--- a/covid19stats.ipynb
+++ b/covid19stats.ipynb
@@ -82,7 +82,7 @@
     "    rki_cases[\"recovered\"] = prepare(\"AnzahlGenesen\", \"NeuGenesen\", rki_cases)\n",
     "    return rki_cases\n",
     "\n",
-    "rki_cases = get_cases(datetime.date(2020,9,21))"
+    "rki_cases = get_cases(datetime.date.today())"
    ]
   },
   {
@@ -93,7 +93,7 @@
     }
    },
    "source": [
-    "## Load county data\n",
+    "## Load district data\n",
     "Used to get number of residents and size in km² of every county.\n",
     "Dataset is taken from [NPGEO](https://npgeo-corona-npgeo-de.hub.arcgis.com/datasets/917fc37a709542548cc3be077a786c17_0)"
    ]
@@ -145,7 +145,7 @@
     }
    },
    "source": [
-    "## Overview States"
+    "## Overview broken down by states"
    ]
   },
   {
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5566641076414711a52c2d3efc4a56ee",
+       "model_id": "2eaf74f3c1b7449ea92be4f3a13134ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +191,7 @@
     }
    },
    "source": [
-    "## Overview Counties (last seven days)"
+    "## Last seven days broken down by district"
    ]
   },
   {
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0280299e79f4cb38c2dc0917cd93d24",
+       "model_id": "1852e924bde244d3ba3ad27a18559f33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -292,49 +292,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-09-16</th>\n",
-       "      <td>2161</td>\n",
-       "      <td>0</td>\n",
-       "      <td>84</td>\n",
-       "      <td>267043</td>\n",
-       "      <td>9386</td>\n",
-       "      <td>242124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-09-17</th>\n",
-       "      <td>2229</td>\n",
-       "      <td>0</td>\n",
-       "      <td>43</td>\n",
-       "      <td>269272</td>\n",
-       "      <td>9386</td>\n",
-       "      <td>242167</td>\n",
+       "      <td>2275</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74</td>\n",
+       "      <td>269354</td>\n",
+       "      <td>9392</td>\n",
+       "      <td>243624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-09-18</th>\n",
-       "      <td>1870</td>\n",
-       "      <td>0</td>\n",
-       "      <td>31</td>\n",
-       "      <td>271142</td>\n",
-       "      <td>9386</td>\n",
-       "      <td>242198</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>3</td>\n",
+       "      <td>47</td>\n",
+       "      <td>271376</td>\n",
+       "      <td>9395</td>\n",
+       "      <td>243671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-09-19</th>\n",
-       "      <td>996</td>\n",
+       "      <td>1312</td>\n",
        "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>272138</td>\n",
-       "      <td>9386</td>\n",
-       "      <td>242210</td>\n",
+       "      <td>24</td>\n",
+       "      <td>272688</td>\n",
+       "      <td>9395</td>\n",
+       "      <td>243695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-09-20</th>\n",
-       "      <td>199</td>\n",
+       "      <td>593</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>273281</td>\n",
+       "      <td>9396</td>\n",
+       "      <td>243708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-09-21</th>\n",
+       "      <td>877</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>272337</td>\n",
-       "      <td>9386</td>\n",
-       "      <td>242210</td>\n",
+       "      <td>19</td>\n",
+       "      <td>274158</td>\n",
+       "      <td>9396</td>\n",
+       "      <td>243727</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -343,11 +343,11 @@
       "text/plain": [
        "            cases  deaths  recovered  cum_cases  cum_deaths  cum_recovered\n",
        "Meldedatum                                                                \n",
-       "2020-09-16   2161       0         84     267043        9386         242124\n",
-       "2020-09-17   2229       0         43     269272        9386         242167\n",
-       "2020-09-18   1870       0         31     271142        9386         242198\n",
-       "2020-09-19    996       0         12     272138        9386         242210\n",
-       "2020-09-20    199       0          0     272337        9386         242210"
+       "2020-09-17   2275       1         74     269354        9392         243624\n",
+       "2020-09-18   2022       3         47     271376        9395         243671\n",
+       "2020-09-19   1312       0         24     272688        9395         243695\n",
+       "2020-09-20    593       1         13     273281        9396         243708\n",
+       "2020-09-21    877       0         19     274158        9396         243727"
       ]
      },
      "execution_count": 7,
@@ -384,7 +384,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec3846b1aa7f4670a642b97fa74cbbcc",
+       "model_id": "e638925c6d6346b3b1eb4b7637a17a9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -428,7 +428,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba3753a1bcdd420683ab36532402a9a6",
+       "model_id": "1a217ba6dda841a79f1b1c5d629ec4d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -460,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Registerd cases per state"
+    "## Registered cases per state"
    ]
   },
   {
@@ -471,7 +471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8a385f1b00741b785993bf919713449",
+       "model_id": "b98d7d1a65ce411c87add12099cab27f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -497,11 +497,12 @@
     "    df.sort_values(datecol, inplace=True)\n",
     "    return df\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(10,8))\n",
     "\n",
-    "for state in states:\n",
+    "fig, ax = plt.subplots(figsize=(10,8))\n",
+    "colors = [\"black\", \"silver\", \"red\", \"lightcoral\", \"goldenrod\", \"yellow\", \"olive\", \"chartreuse\", \"forestgreen\", \"aqua\", \"powderblue\", \"royalblue\", \"darkviolet\", \"violet\", \"fuchsia\"]\n",
+    "for state, color in zip(states, colors):\n",
     "    df = plot_data(state)\n",
-    "    plt.plot(df.index, df.cases, label=state)\n",
+    "    plt.plot(df.index, df.cases, label=state, color=color)\n",
     "\n",
     "# The recovered cases should \"lag behind\" by approx., but it doesn't.\n",
     "# That's because the dataset does not have a date indicating when a patient has recovered.\n",
@@ -512,6 +513,7 @@
     "ax.get_xaxis().set_minor_locator(mdates.DayLocator(interval=1))\n",
     "\n",
     "fig.autofmt_xdate()\n",
+    "\n",
     "plt.legend()\n",
     "plt.title(\"Registered cases\")\n",
     "plt.grid()\n",
@@ -569,58 +571,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>A00-A04</th>\n",
-       "      <td>4822</td>\n",
+       "      <td>4878</td>\n",
        "      <td>1</td>\n",
-       "      <td>4304</td>\n",
-       "      <td>517</td>\n",
-       "      <td>0.020738</td>\n",
+       "      <td>4337</td>\n",
+       "      <td>540</td>\n",
+       "      <td>0.020500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A05-A14</th>\n",
-       "      <td>12690</td>\n",
+       "      <td>12838</td>\n",
        "      <td>0</td>\n",
-       "      <td>11107</td>\n",
-       "      <td>1583</td>\n",
+       "      <td>11223</td>\n",
+       "      <td>1615</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A15-A34</th>\n",
-       "      <td>83803</td>\n",
+       "      <td>84566</td>\n",
        "      <td>19</td>\n",
-       "      <td>74869</td>\n",
-       "      <td>8915</td>\n",
-       "      <td>0.022672</td>\n",
+       "      <td>75564</td>\n",
+       "      <td>8983</td>\n",
+       "      <td>0.022468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A35-A59</th>\n",
-       "      <td>107054</td>\n",
+       "      <td>107640</td>\n",
        "      <td>448</td>\n",
-       "      <td>99505</td>\n",
-       "      <td>7101</td>\n",
-       "      <td>0.418480</td>\n",
+       "      <td>100011</td>\n",
+       "      <td>7181</td>\n",
+       "      <td>0.416202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A60-A79</th>\n",
-       "      <td>41010</td>\n",
-       "      <td>3034</td>\n",
-       "      <td>36024</td>\n",
-       "      <td>1952</td>\n",
-       "      <td>7.398196</td>\n",
+       "      <td>41213</td>\n",
+       "      <td>3036</td>\n",
+       "      <td>36159</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>7.366608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>A80+</th>\n",
-       "      <td>22767</td>\n",
-       "      <td>5884</td>\n",
-       "      <td>16283</td>\n",
-       "      <td>600</td>\n",
-       "      <td>25.844424</td>\n",
+       "      <td>22841</td>\n",
+       "      <td>5892</td>\n",
+       "      <td>16313</td>\n",
+       "      <td>636</td>\n",
+       "      <td>25.795718</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>unbekannt</th>\n",
-       "      <td>191</td>\n",
+       "      <td>182</td>\n",
        "      <td>0</td>\n",
-       "      <td>118</td>\n",
-       "      <td>73</td>\n",
+       "      <td>120</td>\n",
+       "      <td>62</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -630,13 +632,13 @@
       "text/plain": [
        "               cases  deaths  recovered  sick  deathrate %\n",
        "Altersgruppe                                              \n",
-       "A00-A04         4822       1       4304   517     0.020738\n",
-       "A05-A14        12690       0      11107  1583     0.000000\n",
-       "A15-A34        83803      19      74869  8915     0.022672\n",
-       "A35-A59       107054     448      99505  7101     0.418480\n",
-       "A60-A79        41010    3034      36024  1952     7.398196\n",
-       "A80+           22767    5884      16283   600    25.844424\n",
-       "unbekannt        191       0        118    73     0.000000"
+       "A00-A04         4878       1       4337   540     0.020500\n",
+       "A05-A14        12838       0      11223  1615     0.000000\n",
+       "A15-A34        84566      19      75564  8983     0.022468\n",
+       "A35-A59       107640     448     100011  7181     0.416202\n",
+       "A60-A79        41213    3036      36159  2018     7.366608\n",
+       "A80+           22841    5892      16313   636    25.795718\n",
+       "unbekannt        182       0        120    62     0.000000"
       ]
      },
      "execution_count": 11,
@@ -661,11 +663,11 @@
      "output_type": "stream",
      "text": [
       "overall\n",
-      "   - cases:     272337\n",
-      "   - deaths:    9386\n",
-      "   - recovered: 242210\n",
-      "   - sick:      20741\n",
-      "   - deathrate: 0.03446465225070409\n"
+      "   - cases:     274158\n",
+      "   - deaths:    9396\n",
+      "   - recovered: 243727\n",
+      "   - sick:      21035\n",
+      "   - deathrate: 0.03427220799684853\n"
      ]
     }
    ],
@@ -903,25 +905,25 @@
        "      <th>35</th>\n",
        "      <td>528</td>\n",
        "      <td>0</td>\n",
-       "      <td>409</td>\n",
+       "      <td>439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>590</td>\n",
        "      <td>0</td>\n",
-       "      <td>423</td>\n",
+       "      <td>424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>582</td>\n",
        "      <td>0</td>\n",
-       "      <td>180</td>\n",
+       "      <td>248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
-       "      <td>769</td>\n",
+       "      <td>826</td>\n",
        "      <td>0</td>\n",
-       "      <td>12</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -959,10 +961,10 @@
        "32      119       0        118\n",
        "33      301       0        301\n",
        "34      462       0        462\n",
-       "35      528       0        409\n",
-       "36      590       0        423\n",
-       "37      582       0        180\n",
-       "38      769       0         12"
+       "35      528       0        439\n",
+       "36      590       0        424\n",
+       "37      582       0        248\n",
+       "38      826       0         22"
       ]
      },
      "execution_count": 13,
@@ -981,36 +983,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Estimated active cases over time"
+    "## Estimated active cases over time\n",
+    "\n",
+    "For the following you need to download the entire data set (i.e the entire autodata branch from GitHub), not only the data for the current day. You can download the data as zip from [here](https://github.com/woefe/covid19stats/archive/autodata.zip)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-06.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-03-30.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-07.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-03-31.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-01.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-02.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-03.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-04.csv\n",
+      "WARNING:root:Ignoring file /home/woefe/download/covid19stats-autodata/data/silo/2020-04-05.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import calendar\n",
     "import os\n",
+    "import logging\n",
+    "from pathlib import Path\n",
     "from multiprocessing import Pool\n",
     "from typing import Tuple\n",
     "\n",
-    "cal = calendar.Calendar()\n",
+    "SILO_DIR = Path.home() / \"download/covid19stats-autodata/data/silo\"\n",
     "\n",
-    "def get_active_cases(date: datetime.date, url_prefix=\"/tmp/tmp.71robUWnfn/silo\") -> Tuple[str,int]:\n",
+    "def get_active_cases(date: datetime.date) -> Tuple[datetime.date,int]:\n",
     "    date_str = date.isoformat()\n",
     "    try:\n",
-    "        rki_cases = pd.read_csv(f\"{url_prefix}/{date_str}.csv\")\n",
+    "        data_file = SILO_DIR / f\"{date_str}.csv\"\n",
+    "        rki_cases = pd.read_csv(data_file)\n",
     "    except:\n",
-    "        return date_str, -1\n",
+    "        logging.warning(\"Ignoring file %s\", data_file)\n",
+    "        return date, -1\n",
     "    cases = prepare(\"AnzahlFall\", \"NeuerFall\", rki_cases).sum()\n",
     "    deaths = prepare(\"AnzahlTodesfall\", \"NeuerTodesfall\", rki_cases).sum()\n",
     "    recovered = prepare(\"AnzahlGenesen\", \"NeuGenesen\", rki_cases).sum()\n",
-    "    return date_str, cases - deaths - recovered\n",
+    "    return date, cases - deaths - recovered\n",
     "\n",
-    "dates = (date \n",
-    "    for month in range(3,10)\n",
+    "cal = calendar.Calendar()\n",
+    "dates = (\n",
+    "    date \n",
+    "    for month in range(4,10)\n",
     "    for date in cal.itermonthdates(2020, month)\n",
+    "    if date <= datetime.date.today()\n",
     ")\n",
     "\n",
     "with Pool(len(os.sched_getaffinity(0))) as pool:\n",
@@ -1019,13 +1046,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bbdfb5e560c42f59188217a2c069e44",
+       "model_id": "1dcd28d5c84b4b2b8c1ac4382209e51d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1041,14 +1070,14 @@
     "active_daily = pd.DataFrame(cases_per_day, columns=[\"date\", \"active_cases\"]).sort_values(\"date\")\n",
     "fig, ax = plt.subplots(figsize=(10,8))\n",
     "\n",
-    "plt.plot(active_daily.date, active_daily.active_cases, label=\"Estimated Active Cases\")\n",
+    "plt.plot(active_daily.date, active_daily.active_cases, label=\"Estimated active cases\")\n",
     "\n",
     "ax.get_xaxis().set_major_locator(mdates.DayLocator(interval=5))\n",
     "ax.get_xaxis().set_minor_locator(mdates.DayLocator(interval=1))\n",
     "\n",
     "fig.autofmt_xdate()\n",
     "plt.legend()\n",
-    "plt.title(\"Estimated Active Cases every day (all of Germany)\")\n",
+    "plt.title(\"Estimated active cases every day (all of Germany)\")\n",
     "plt.grid()\n",
     "plt.show()"
    ]
