Add stacked plot for overall cases

--- a/covid19stats.ipynb
+++ b/covid19stats.ipynb
@@ -160,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2eaf74f3c1b7449ea92be4f3a13134ce",
+       "model_id": "1161993e405441d49aca9b3ff23edb28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +206,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1852e924bde244d3ba3ad27a18559f33",
+       "model_id": "d19597fccc66461c95fa289c0f63d089",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,7 +384,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e638925c6d6346b3b1eb4b7637a17a9e",
+       "model_id": "6f89a3b6827c472c80da4c72ad6e69c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -428,7 +428,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a217ba6dda841a79f1b1c5d629ec4d8",
+       "model_id": "91386f4df850446fa532528cdbdbb278",
        "version_major": 2,
        "version_minor": 0
       },
@@ -467,24 +467,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b98d7d1a65ce411c87add12099cab27f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "states = list(rki_cases.drop_duplicates(\"Bundesland\").Bundesland)\n",
+    "\n",
+    "colors = [\"black\", \"gray\", \"lightgray\", \"red\", \"lightcoral\", \"goldenrod\", \"yellow\", \"olive\", \"chartreuse\", \"forestgreen\", \"aqua\", \"powderblue\", \"royalblue\", \"darkviolet\", \"violet\", \"fuchsia\"]\n",
     "\n",
     "#datecol = \"Refdatum\"\n",
     "datecol = \"Meldedatum\"\n",
@@ -498,24 +485,93 @@
     "    return df\n",
     "\n",
     "\n",
+    "by_state = pd.DataFrame(index=rki_cases.groupby(datecol).first().index)\n",
+    "for state in states:\n",
+    "    by_state[state] = plot_data(state).cases\n",
+    "by_state = by_state.fillna(0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "81570e46ab394b84b1a038d3194655b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "fig, ax = plt.subplots(figsize=(10,8))\n",
-    "colors = [\"black\", \"silver\", \"red\", \"lightcoral\", \"goldenrod\", \"yellow\", \"olive\", \"chartreuse\", \"forestgreen\", \"aqua\", \"powderblue\", \"royalblue\", \"darkviolet\", \"violet\", \"fuchsia\"]\n",
-    "for state, color in zip(states, colors):\n",
-    "    df = plot_data(state)\n",
-    "    plt.plot(df.index, df.cases, label=state, color=color)\n",
     "\n",
-    "# The recovered cases should \"lag behind\" by approx., but it doesn't.\n",
-    "# That's because the dataset does not have a date indicating when a patient has recovered.\n",
-    "# Instead the original record seems to be updated.\n",
-    "# Hence, the I won't plot the recovered cases.\n",
-    "#plt.plot(per_day.index, per_day.cum_recovered, label=\"Recovered\")\n",
+    "for state, color in zip(states, colors):\n",
+    "    srs = by_state[state]\n",
+    "    plt.plot(srs.index, srs, label=state, color=color)\n",
+    "\n",
     "ax.get_xaxis().set_major_locator(mdates.DayLocator(interval=5))\n",
     "ax.get_xaxis().set_minor_locator(mdates.DayLocator(interval=1))\n",
     "\n",
     "fig.autofmt_xdate()\n",
     "\n",
     "plt.legend()\n",
-    "plt.title(\"Registered cases\")\n",
+    "plt.title(\"Registered cases overlayed\")\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9e96ab32ac04245b99a2d5a744a8a19",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(10,8))\n",
+    "\n",
+    "below = None\n",
+    "for state, color in zip(states, colors):\n",
+    "    df = by_state[state]\n",
+    "    if below is None:\n",
+    "        plt.bar(by_state.index, df, label=state, color=color)\n",
+    "        below = df\n",
+    "    else:\n",
+    "        plt.bar(by_state.index, df, label=state, color=color, bottom=below)\n",
+    "        below = below.add(df, fill_value=0)\n",
+    "        \n",
+    "\n",
+    "ax.get_xaxis().set_major_locator(mdates.DayLocator(interval=5))\n",
+    "ax.get_xaxis().set_minor_locator(mdates.DayLocator(interval=1))\n",
+    "\n",
+    "fig.autofmt_xdate()\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.title(\"Registered cases stacked\")\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -529,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +697,7 @@
        "unbekannt        182       0        120    62     0.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +1023,7 @@
        "38      826       0         22"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1054,7 +1110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dcd28d5c84b4b2b8c1ac4382209e51d",
+       "model_id": "d79649161a5149cbba57d1d7f41e4f34",
        "version_major": 2,
        "version_minor": 0
       },
